2009-02-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSToolbarFrameworkPrivate.h: Add method
	_setCustomizationPaletteIsRunning:. 
	* Source/NSToolbar.m: (-runCustomizationPalette:): Code to run
	customization palette.
	* Source/NSToolbarItem.m (-copyWithZone:): Try to copy the view.
	* Source/GSToolbarCustomizationPalette.h
	* Source/GSToolbarCustomizationPalette.m: New files.
	* GNUmakefile: Add new files.
	* Panels/English.lproj/GSToolbarCustomizationPalette.gorm
	* Panels/English.lproj/GSToolbarCustomizationPalette.gorm/data.info
	* Panels/English.lproj/GSToolbarCustomizationPalette.gorm/data.classes
	* Panels/English.lproj/GSToolbarCustomizationPalette.gorm/objects.gorm
	* Panels/GNUmakefile: Add new panel.
	This is a stripped down version of the toolbar customization
	branch by Quentin Mathe <qmathe@club-internet.fr>.

2009-02-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSThemePrivate.h:
	* Source/GSTheme.m:
	* Source/NSImage.m:
	Move/rename new proxy code to GSTheme.m and declare it in
	GSThemePrivate.h so that all code in the GUI can use it
	(we will need to allow other resources to automatically update
	to the current theme, not just images).

2009-02-09 20:16-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSToolbar.m: (-windowDidUpdate:): Automatically update
	the toolbar on every window update.  This makes sure that
	no matter what window an event happens in the toolbar gets
	properly updated for ALL windows.

2009-02-08  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSWorkspace.m (-findApplications): Retain cached path of
	make_services tool.

	* Tools/GSspell.m (-init): Initialize language configuration
	variable used by the aspell checker.  This prevents a crash of
	the spelling server during its initialization.

	* Source/NSSavePanel.m (-browser:createRowsForColumn:inMatrix:):
	Make sure the contents of the initial directory is always shown.
	This should fix bug #25363.

2009-02-08 Richard Frith-Macdonald <rfm@gnu.org>
